tests/sksl/errors/StaticSwitchTest.glsl
### Compilation failed:

error: 4: static switch has non-static test
1 error
